--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router": "^6.6.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
